# cpuid

./: .gitignore  AMD.sln  CMakeLists.txt  LICENSE  README.md  benchmarking-tools.sln  common-c++.props  common-debug.props  common-release.props  cpuid.sln  no-lifetime-rules.ruleset
cache-analysis/: cache-analysis.cpp  cache-analysis.vcxproj  cache-analysis.vcxproj.filters  stdafx.h
cache-analysis/include/: cache-ping.hpp  definitions.hpp  measurement.hpp
cache-analysis/src/: cache-analysis.cpp  cache-ping.cpp  main.cpp  measurement.cpp
cpuid/: CMakeLists.txt  Makefile  cpuid.vcxproj  cpuid.vcxproj.filters
cpuid/include/: cache-and-topology.hpp  cache.hpp  cpuid.hpp  docopt.h  docopt_private.h  docopt_util.h  features.hpp  hypervisors.hpp  standard.hpp  stdafx.h  topology.hpp  utility.hpp
cpuid/internal/: docopt.h  docopt_private.h  docopt_util.h
cpuid/src/: cache-and-topology.cpp  cache.cpp  cpuid.cpp  docopt.cpp  features.cpp  hypervisors.cpp  main.cpp  standard.cpp  topology.cpp
cpuid/src/cpuid/: main.cpp
docopt/: CMakeLists.txt  docopt.vcxproj  docopt.vcxproj.filters
docopt/include/docopt/: docopt.hpp
docopt/internal/: docopt_private.h
docopt/src/: docopt.cpp
docopt/src/docopt/: docopt.cpp  docopt_private.h  docopt_util.h  stdafx.h
docopt/tests/: docopt-tests.vcxproj
docopt/tests/data/: docopt.testcases
docopt/tests/src/: test.cpp
docopt/tests/src/docopt/: stdafx.h  test.cpp
dumps/instlatx64/: source.txt
dumps/intel-sde/: clx.txt  icl.txt  icx.txt  tnt.txt
libcpuid/: CMakeLists.txt  Makefile  libcpuid.vcxproj  libcpuid.vcxproj.filters
libcpuid/cpuid/: cpuid.hpp
libcpuid/include/: cache-and-topology.hpp  cpuid.hpp  features.hpp  hypervisors.hpp  standard.hpp  stdafx.h  utility.hpp
libcpuid/include/cpuid/: cpuid.hpp  suffixes.hpp
libcpuid/internal/: cache-and-topology.hpp  features.hpp  hypervisors.hpp  utility.hpp
libcpuid/src/: cache-and-topology.cpp  cpuid.cpp  features.cpp  hypervisors.cpp  standard.cpp  stdafx.cpp  utility.cpp
libcpuid/src/cpuid/: cache-and-topology.cpp  cache-and-topology.hpp  cpuid.cpp  features.cpp  features.hpp  hypervisors.cpp  hypervisors.hpp  standard.cpp  standard.hpp  stdafx.h  utility.cpp  utility.hpp
libcpuid/tests/: libcpuid-tests.vcxproj
libcpuid/tests/data/dumps/intel-sde/: cnl.txt  future.txt
libcpuid/tests/src/: test.cpp
libcpuid/tests/src/cpuid/: stdafx.h  test.cpp
tests/: source.txt  tests.vcxproj  tests.vcxproj.filters
tests-msvc/: tests-msvc.vcxproj  tests-msvc.vcxproj.filters
tests/data/: docopt.testcases
tests/include/: stdafx.h
tests/internal/: utility.hpp
tests/src/: docopt-tests.cpp  tests.cpp
